# agent-extractor

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  TASKS.md  TEST_EXAMPLES.md  config.json  pyproject.toml  requirements.txt  test.http
src/: __init__.py  exceptions.py  main.py
src/agents/: __init__.py  extractor_agent.py  orchestrator.py  validator_agent.py
src/config/: __init__.py  settings.py
src/extraction/: __init__.py  document_parser.py  extractor.py  router.py  structured_parser.py  validator.py
src/interfaces/: __init__.py  mcp_server.py
tests/: __init__.py  test_config_env_override.py  test_document_router.py  test_http_error_metadata.py  test_orchestrator_async.py  test_request_validation.py  test_structured_parser.py  test_validator_failures.py
